deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: iris-deployment
  labels:
    app: iris

spec:
  replicas: 2
  selector:
    matchLabels:
      app: iris

  template:
    metadata:
      labels:
        app: iris

    spec:
      serviceAccountName: iris-service-account
      imagePullSecrets:
        - name: docker-hub-secret

      containers:
        - name: iris-container
          image: mu2kaaa/my-ml-app:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5050

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

          livenessProbe:
            httpGet:
              path: /
              port: 5050
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 5050
            initialDelaySeconds: 5
            periodSeconds: 5
