service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-service
  labels:
    app: iris
spec:
  selector:
    app: iris
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5050
    name: http
  type: ClusterIP
